# mcp

./: README.md  arch-strategy.md  challenges.md  scope.md  usecases.md
mcp-server/simple-calculator/: Cargo.toml
mcp-servers/: README.md  dummy
mcp-servers/simple-rust-server/: README.md
mcp-servers/simple-rust-server/src/: main.rs
mcp-servers/simple-rust-server/src/mylib/: calcualor.rs
mcp-servers/socketcan-mcp-server/src/: main.rs
mcp-servers/socketcan-mcp-server/src/canlib/: socketcan.rs
mcp-servers/someip-mcp-server/: README.md
